-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
Security 2022-11-28
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Macro compares unsigned to 0
An unsigned value can never be negative, so this test will always evaluate the same way. An unsigned value can never be less than 0
/src/mongo/crypto/fle_crypto.cpp:3546: NO_EFFECT 134118 This greater-than-or-equal-to-zero comparison of an unsigned value is always true. "precision.get() >= 0U".