SERVER-71295 Coverity analysis defect 134118: Macro compares unsigned to 0